about section developing

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,9 @@ html {
   font-weight: 400;
   font-style: normal;
 }
+.anchor {
+  display: block;
+  height: 100px;
+  margin-top: -100px;
+  visibility: hidden;
+}
