--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,37 @@ html {
   margin-top: -100px;
   visibility: hidden;
 }
+header .menu-btn {
+  position: relative;
+  cursor: pointer;
+  width: 35px;
+  height: 30px;
+  border: none;
+  background: none;
+  padding: 0;
+}
+
+header .btn-line {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background: #2978b5;
+  margin: 5px auto;
+  transition: all 0.3s ease-in-out;
+}
+.dark header .btn-line {
+  background: #cdcdff;
+}
+
+/*Animate lines*/
+header .menu-btn.open .btn-line:nth-child(2) {
+  opacity: 0;
+}
+
+header .menu-btn.open .btn-line:nth-child(1) {
+  transform: translateY(7px) rotate(45deg);
+}
+
+header .menu-btn.open .btn-line:nth-child(3) {
+  transform: translateY(-9px) rotate(-45deg);
+}
