--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,29 @@ header .menu-btn.open .btn-line:nth-child(1) {
 header .menu-btn.open .btn-line:nth-child(3) {
   transform: translateY(-9px) rotate(-45deg);
 }
+/* HTML: <div class="loader"></div> */
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80px;
+  aspect-ratio: 1;
+  animation: l2-1 2s infinite linear, l2-2 1s infinite steps(1) alternate;
+}
+@keyframes l2-1 {
+  0% {
+    transform: perspective(150px) rotateX(0deg);
+  }
+  100% {
+    transform: perspective(150px) rotateX(360deg);
+  }
+}
+@keyframes l2-2 {
+  0% {
+    background: #2978b5;
+  }
+  50% {
+    background: #cdcdff;
+  }
+}
